headers/phonon.h


    typedef void                IPLvoid;            
    typedef int                 IPLint32;           
    typedef float               IPLfloat32;         
    typedef unsigned char       IPLbyte;            
    typedef void*               IPLhandle;
    typedef enum {
        IPL_STATUS_SUCCESS,         
        IPL_STATUS_FAILURE,         
        IPL_STATUS_OUTOFMEMORY,     
        IPL_STATUS_INITIALIZATION   
    } IPLerror;
    typedef struct {
        IPLfloat32 x;   
        IPLfloat32 y;   
        IPLfloat32 z;   
    } IPLVector3;
    typedef enum {
        IPL_CONVOLUTIONTYPE_PHONON,         
        IPL_CONVOLUTIONTYPE_TRUEAUDIONEXT   
    } IPLConvolutionType;
    typedef struct {
        IPLint32            samplingRate;       
        IPLint32            frameSize;          
        IPLConvolutionType  convolutionType;    
    } IPLRenderingSettings;
    typedef enum {
        IPL_CHANNELLAYOUTTYPE_SPEAKERS,     
        IPL_CHANNELLAYOUTTYPE_AMBISONICS    
    } IPLChannelLayoutType;
    typedef enum {
        IPL_CHANNELLAYOUT_MONO,             
        IPL_CHANNELLAYOUT_STEREO,           
        IPL_CHANNELLAYOUT_QUADRAPHONIC,     
        IPL_CHANNELLAYOUT_FIVEPOINTONE,     
        IPL_CHANNELLAYOUT_SEVENPOINTONE,    
        IPL_CHANNELLAYOUT_CUSTOM            
    } IPLChannelLayout;
    typedef enum {
        IPL_AMBISONICSORDERING_FURSEMALHAM, 
        IPL_AMBISONICSORDERING_ACN          
    } IPLAmbisonicsOrdering;
    typedef enum {
        IPL_AMBISONICSNORMALIZATION_FURSEMALHAM,    
        IPL_AMBISONICSNORMALIZATION_SN3D,           
        IPL_AMBISONICSNORMALIZATION_N3D             
    } IPLAmbisonicsNormalization;
    typedef enum {
        IPL_CHANNELORDER_INTERLEAVED,   
        IPL_CHANNELORDER_DEINTERLEAVED  
    } IPLChannelOrder;
    typedef struct {
        IPLChannelLayoutType        channelLayoutType;          
        IPLChannelLayout            channelLayout;              
        IPLint32                    numSpeakers;                
        IPLVector3*                 speakerDirections;          
        IPLint32                    ambisonicsOrder;            
        IPLAmbisonicsOrdering       ambisonicsOrdering;         
        IPLAmbisonicsNormalization  ambisonicsNormalization;    
        IPLChannelOrder             channelOrder;               
    } IPLAudioFormat;
    typedef struct {
        IPLAudioFormat  format;                 
        IPLint32        numSamples;             
        IPLfloat32*     interleavedBuffer;      
        IPLfloat32**    deinterleavedBuffer;    
    } IPLAudioBuffer;
    typedef enum {
        IPL_HRTFDATABASETYPE_DEFAULT,   
        IPL_HRTFDATABASETYPE_CUSTOM     
    } IPLHrtfDatabaseType;
    typedef struct {
        IPLfloat32 real;    
        IPLfloat32 imag;    
    } IPLComplex;
    typedef void (*IPLFftHelper)(IPLvoid* data, IPLfloat32* signal, IPLComplex* spectrum);
    typedef void (*IPLHrtfLoadCallback)(IPLint32 signalSize, IPLint32 spectrumSize, IPLFftHelper fftHelper,
        IPLvoid* fftHelperData);
    typedef void (*IPLHrtfUnloadCallback)();
    typedef void (*IPLHrtfLookupCallback)(IPLfloat32* direction, IPLComplex* leftHrtf, IPLComplex* rightHrtf);
    typedef struct {
        IPLHrtfDatabaseType             type;                       
        IPLbyte*                        hrtfData;                   
        IPLint32                        numHrirSamples;             
        IPLHrtfLoadCallback             loadCallback;               
        IPLHrtfUnloadCallback           unloadCallback;             
        IPLHrtfLookupCallback           lookupCallback;             
    } IPLHrtfParams;
    IPLAPI IPLerror iplCreateBinauralRenderer(IPLhandle context, IPLRenderingSettings renderingSettings,
        IPLHrtfParams params, IPLhandle* renderer);
    IPLAPI IPLvoid iplDestroyBinauralRenderer(IPLhandle* renderer);
    IPLAPI IPLerror iplCreatePanningEffect(IPLhandle renderer, IPLAudioFormat inputFormat, IPLAudioFormat outputFormat,
        IPLhandle* effect);
    IPLAPI IPLvoid iplDestroyPanningEffect(IPLhandle* effect);
    IPLAPI IPLvoid iplApplyPanningEffect(IPLhandle effect, IPLAudioBuffer inputAudio, IPLVector3 direction,
        IPLAudioBuffer outputAudio);
    IPLAPI IPLvoid iplFlushPanningEffect(IPLhandle effect);
    typedef enum {
        IPL_HRTFINTERPOLATION_NEAREST,  
        IPL_HRTFINTERPOLATION_BILINEAR  
    } IPLHrtfInterpolation;
    IPLAPI IPLvoid iplApplyBinauralEffect(IPLhandle effect, IPLAudioBuffer inputAudio, IPLVector3 direction,
        IPLHrtfInterpolation interpolation, IPLAudioBuffer outputAudio);