src/bindgen.rs

/// A function that you can call to calculate the Fast Fourier Transform (FFT) of a real-valued time-domain
/// signal. You will typically call this from within your implementation of IPLHrtfLoadCallback, to transform your
/// time-domain Head-Related Impulse Responses (HRIRs) into Head-Related Transfer Functions (HRTFs).
///
/// \param  data                Pointer to internal data required for calculating Fourier transforms. This will be
/// passed in to your implementation of IPLHrtfLoadCallback.
/// \param  signal              Array containing the time-domain signal. The number of elements in this array must
/// match the signalSize parameter received by IPLHrtfLoadCallback.
/// \param  spectrum            Array containing the frequency-domain spectrum. The number of elements in this
/// array must match the spectrumSize parameter received by IPLHrtfLoadCallback.
pub type IPLFftHelper = ::std::option::Option<
    unsafe extern "C" fn(data: *mut IPLvoid,
                         signal: *mut IPLfloat32,
                         spectrum: *mut IPLComplex),
>;
/// Pointer to a function that will be called during the execution of iplCreateBinauralRenderer, to allow your
/// application to pre-transform all HRTF data into frequency domain.
///
/// \param  signalSize          Number of elements in the time-domain (HRIR) data arrays that must be transformed.
/// This will be greater than the actual size of the HRIRs passed to
/// iplCreateBinauralRenderer. Any array passed to fftHelper must contain the HRIR
/// data at the start, and the rest of the elements must be initialized to zero. For
/// example, if signalSize is 1024, and the HRIRs are 200 samples long, the arrays
/// passed to the signal parameter of fftHelper must be 1024 samples long, with the
/// first 200 samples containing the HRIR data, and the remaining 824 samples containing
/// zeroes.
/// \param  spectrumSize        Number of elements in the frequency-domain (HRTF) data arrays that will contain the
/// results of the transformation. You will typically allocate arrays of this size for
/// each HRIR; they must not be freed until IPLHrtfUnloadCallback is called.
/// \param  fftHelper           Pointer to a function that you can call to calculate the Fourier transforms of the
/// HRIRs.
/// \param  fftHelperData       Internal data required for calculating Fourier transforms. Pass this to fftHelper.
pub type IPLHrtfLoadCallback =
    ::std::option::Option<
        unsafe extern "C" fn(signalSize: IPLint32,
                             spectrumSize: IPLint32,
                             fftHelper: IPLFftHelper,
                             fftHelperData: *mut IPLvoid),
    >;
/// Pointer to a function that will be called during the execution of iplDestroyBinauralRenderer, to allow your
/// application to free memory allocated during IPLHrtfLoadCallback.
pub type IPLHrtfUnloadCallback = ::std::option::Option<unsafe extern "C" fn()>;
/// Pointer to a function that will be called during the execution of iplApplyBinauralEffect, to left your
/// application copy HRTF data for a given direction into arrays managed by Phonon.
///
/// \param  direction           Array containing the coordinates of the unit vector from the listener to the
/// source, in Cartesian coordinates.
/// \param  leftHrtf            Array into which you should copy the frequency-domain left-ear HRTF for the given
/// direction.
/// \param  rightHrtf           Array into which you should copy the frequency-domain right-ear HRTF for the given
/// direction.
pub type IPLHrtfLookupCallback =
    ::std::option::Option<
        unsafe extern "C" fn(direction: *mut IPLfloat32,
                             leftHrtf: *mut IPLComplex,
                             rightHrtf: *mut IPLComplex),
    >;
/// Parameters used to describe the HRTF database you want to use when creating a Binaural Renderer object.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLHrtfParams {
    /// < Type of HRTF database to use.
    pub type_: IPLHrtfDatabaseType,
    /// < Reserved. Must be NULL.
    pub hrtfData: *mut IPLbyte,
    /// < If using custom HRTF data, the size of each
    /// time-domain HRIR.
    pub numHrirSamples: IPLint32,
    /// < Callback that will be called when creating
    /// a Binaural Renderer object.
    pub loadCallback: IPLHrtfLoadCallback,
    /// < Callback that will be called when destroying a
    /// Binaural Renderer object.
    pub unloadCallback: IPLHrtfUnloadCallback,
    /// < Callback that may be called to look up an HRTF
    /// and return a copy of the data.
    pub lookupCallback: IPLHrtfLookupCallback,
}
#[test]
fn bindgen_test_layout_IPLHrtfParams() {
    assert_eq!(
        ::std::mem::size_of::<IPLHrtfParams>(),
        48usize,
        concat!("Size of: ", stringify!(IPLHrtfParams))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLHrtfParams>(),
        8usize,
        concat!("Alignment of ", stringify!(IPLHrtfParams))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLHrtfParams>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLHrtfParams),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLHrtfParams>())).hrtfData as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLHrtfParams),
            "::",
            stringify!(hrtfData)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLHrtfParams>())).numHrirSamples as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLHrtfParams),
            "::",
            stringify!(numHrirSamples)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLHrtfParams>())).loadCallback as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLHrtfParams),
            "::",
            stringify!(loadCallback)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLHrtfParams>())).unloadCallback as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLHrtfParams),
            "::",
            stringify!(unloadCallback)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLHrtfParams>())).lookupCallback as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLHrtfParams),
            "::",
            stringify!(lookupCallback)
        )
    );
}
extern "C" {
    /// Creates a Binaural Renderer object. This function must be called before creating any Panning Effect objects,
    /// Object-Based Binaural Effect objects, Virtual Surround Effect objects, or Ambisonics Binaural Effect objects.
    /// Calling this function for the first time is somewhat expensive; avoid creating Binaural Renderer objects in
    /// your audio thread if at all possible. **This function is not thread-safe. It cannot be simultaneously called
    /// from multiple threads.**
    ///
    /// \param  context             The Context object used by the audio engine.
    /// \param  renderingSettings   An \c IPLRenderingSettings object describing the audio pipeline's DSP processing
    /// parameters. These properties must remain constant throughout the lifetime of your
    /// application.
    /// \param  params              Parameters describing the type of HRTF data you wish to use (built-in HRTF data or
    /// your own custom HRTF data).
    /// \param  renderer            [out] Handle to the created Binaural Renderer object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateBinauralRenderer(
        context: IPLhandle,
        renderingSettings: IPLRenderingSettings,
        params: IPLHrtfParams,
        renderer: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys a Binaural Renderer object. If any other API objects are still referencing the Binaural Renderer
    /// object, it will not be destroyed; destruction occurs when the object's reference count reaches zero.
    ///
    /// \param  renderer            [in, out] Address of a handle to the Binaural Renderer object to destroy.
    pub fn iplDestroyBinauralRenderer(renderer: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Creates a Panning Effect object. This can be used to render a point source on surround speakers, or using
    /// Ambisonics.
    ///
    /// \param  renderer            Handle to a Binaural Renderer object.
    /// \param  inputFormat         The format of the audio buffers that will be passed as input to this effect. All
    /// subsequent calls to \c ::iplApplyPanningEffect for this effect object must use
    /// \c IPLAudioBuffer objects with the same format as specified here. The input format
    /// must not be Ambisonics.
    /// \param  outputFormat        The format of the audio buffers which will be used to retrieve the output from
    /// this effect. All subsequent calls to \c ::iplApplyPanningEffect for this effect
    /// object must use \c IPLAudioBuffer objects with the same format as specified here.
    /// Any valid audio format may be specified as the output format.
    /// \param  effect              [out] Handle to the created Panning Effect object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreatePanningEffect(
        renderer: IPLhandle,
        inputFormat: IPLAudioFormat,
        outputFormat: IPLAudioFormat,
        effect: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys a Panning Effect object.
    ///
    /// \param  effect              [in, out] Address of a handle to the Panning Effect object to destroy.
    pub fn iplDestroyPanningEffect(effect: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Applies 3D panning to a buffer of audio data, using the configuration of a Panning Effect object. The input
    /// audio is treated as emanating from a single point. If the input audio buffer contains more than one channel,
    /// it will automatically be downmixed to mono.
    ///
    /// \param  effect              Handle to a Panning Effect object.
    /// \param  inputAudio          Audio buffer containing the data to render using 3D panning. The format of this
    /// buffer must match the \c inputFormat parameter passed to \c ::iplCreatePanningEffect.
    /// \param  direction           Unit vector from the listener to the point source, relative to the listener's
    /// coordinate system.
    /// \param  outputAudio         Audio buffer that should contain the rendered audio data. The format of this buffer
    /// must match the \c outputFormat parameter passed to \c ::iplCreatePanningEffect.
    pub fn iplApplyPanningEffect(
        effect: IPLhandle,
        inputAudio: IPLAudioBuffer,
        direction: IPLVector3,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    /// Resets any internal state maintained by a Panning Effect object. This is useful if the Panning Effect object
    /// is going to be disabled/unused for a few frames; resetting the internal state will prevent an audible glitch
    /// when the Panning Effect object is re-enabled at a later time.
    ///
    /// \param  effect              Handle to a Panning Effect object.
    pub fn iplFlushPanningEffect(effect: IPLhandle) -> IPLvoid;
}
